# loupe

./: .gitignore  PRODUCTION.md  README.md  architecture.md  decisions.md  handoff.md  matrix_shot.png.import  plan.md  project.godot
assets/eqn/: 0a964a8af58b.png.import  0acf28505247.png.import  0b2cee240ba3.png.import  0e3a18b4e0d4.png.import  0ee30bbac078.png.import  101b7b5e32bb.png.import  113fede266ff.png.import  1666472b055a.png.import  17a3999972fc.png.import  25569993c3e3.png.import  2eb1f54bf41d.png.import  43a09d1b5b3b.png.import  index.json  (+17 more)
docs/: data-contract.md
files/: L1.png.import  L2.png.import  L2b.png.import  a.png.import  b.png.import  conv.png.import  lstm_l2.png.import  resnet.png.import  sd.png.import  vit.png.import  vit_l2.png.import  x.png.import
ingest/: README.md  pyproject.toml
ingest/examples/: gpt2_config.json  rocket_engine.blueprint.json
ingest/loupe_ingest/: __init__.py  cache.py  cli.py  ir.py  pipeline.py  router.py
ingest/loupe_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ingest/loupe_ingest/acquire/: __init__.py
ingest/loupe_ingest/ingestors/: __init__.py  arxiv.py  base.py  blueprint.py  github.py  llm_generic.py  model_arch.py  pdb.py  transformer.py
ingest/loupe_ingest/llm/: __init__.py  client.py  providers.py
ingest/tests/: test_api_ingestors.py  test_deterministic.py  test_llm_frontier.py  test_model_arch.py
ingest/tools/: extract_transformer.py
ir/: loupe-ir.schema.json
tools/: gen_models.py  render_equations.py  test_geom.gd.uid  verify.gd  verify.gd.uid
(+55 files in other folders)
